// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Chip component should match snapshot - Any valid Chip with Avatar: Chip snapshot - with avatar 1`] = `
<div
  className="MuiChip-root"
  onKeyUp={[Function]}
>
  <div
    className="MuiAvatar-root MuiAvatar-circle MuiChip-avatar MuiAvatar-colorDefault"
    style={Object {}}
  >
    XD
  </div>
  <span
    className="MuiChip-label"
  />
</div>
`;

exports[`Chip component should match snapshot - Any valid Chip with Icon: Chip snapshot - with icon 1`] = `
<div
  className="MuiChip-root"
  onKeyUp={[Function]}
>
  <i
    className="natds-icons natds-icons-filled-action-add makeStyles-root-2 MuiChip-icon"
  />
  <span
    className="MuiChip-label"
  />
</div>
`;

exports[`Chip component should match snapshot - Any valid Chip with custom deleteIcon: Chip snapshot - with custom deleteIcon 1`] = `
<div
  className="MuiChip-root MuiChip-deletable"
  onKeyUp={[Function]}
  role="button"
  tabIndex={0}
>
  <span
    className="MuiChip-label"
  />
  <i
    className="natds-icons natds-icons-filled-action-cancel makeStyles-root-4 MuiChip-deleteIcon"
    onClick={[Function]}
  />
</div>
`;

exports[`Chip component should match snapshot - Any valid Chip with default color: Chip snapshot - with default color 1`] = `
<div
  className="MuiChip-root"
  onKeyUp={[Function]}
>
  <span
    className="MuiChip-label"
  />
</div>
`;

exports[`Chip component should match snapshot - Any valid Chip with default deleteIcon: Chip snapshot - with default deleteIcon 1`] = `
<div
  className="MuiChip-root MuiChip-deletable"
  onKeyUp={[Function]}
  role="button"
  tabIndex={0}
>
  <span
    className="MuiChip-label"
  />
  <i
    className="natds-icons natds-icons-filled-action-cancel makeStyles-root-3 MuiChip-deleteIcon"
    onClick={[Function]}
  />
</div>
`;

exports[`Chip component should match snapshot - Any valid Chip with default variant: Chip snapshot - with default variant 1`] = `
<div
  className="MuiChip-root"
  onKeyUp={[Function]}
>
  <span
    className="MuiChip-label"
  />
</div>
`;

exports[`Chip component should match snapshot - Any valid Chip with medium size: Chip snapshot - with medium size 1`] = `
<div
  className="MuiChip-root"
  onKeyUp={[Function]}
>
  <span
    className="MuiChip-label"
  />
</div>
`;

exports[`Chip component should match snapshot - Any valid Chip with outlined variant: Chip snapshot - with outlined variant 1`] = `
<div
  className="MuiChip-root MuiChip-outlined"
  onKeyUp={[Function]}
>
  <span
    className="MuiChip-label"
  />
</div>
`;

exports[`Chip component should match snapshot - Any valid Chip with primary color: Chip snapshot - with primary color 1`] = `
<div
  className="MuiChip-root MuiChip-colorPrimary"
  onKeyUp={[Function]}
>
  <span
    className="MuiChip-label"
  />
</div>
`;

exports[`Chip component should match snapshot - Any valid Chip with secondary color: Chip snapshot - with secondary color 1`] = `
<div
  className="MuiChip-root MuiChip-colorSecondary"
  onKeyUp={[Function]}
>
  <span
    className="MuiChip-label"
  />
</div>
`;

exports[`Chip component should match snapshot - Any valid Chip with small size: Chip snapshot - with small size 1`] = `
<div
  className="MuiChip-root MuiChip-sizeSmall"
  onKeyUp={[Function]}
>
  <span
    className="MuiChip-label MuiChip-labelSmall"
  />
</div>
`;
